# immich-memory-emails

./: .env.example  .gitignore  README.md  email_template.html  main.py  pyproject.toml
lib/: immich.py
